* Makefile.in (OBJS-common): Remove tree-must-alias.o 	(tree-must-alias.o): Remove. 	* common.opt (ftree-must-alias): Remove. 	* flags.h (flag_tree_must_alias): Remove.  Update all users. 	* timevar.def (TV_TREE_MUST_ALIAS): Remove. 	* toplev.c (f_options): Remove entry for -ftree-must-alias. 	* tree-alias-common.c (local_alias_vars): Add GTY marker. 	(local_alias_varnums): Likewise. 	* tree-dfa.c (aliases_computed_p): Declare. 	(dump_variable): Show variable UID and dereferenced bits. 	(compute_may_aliases): Add arguments 'vars_to_rename' and 'phase'. 	Do not call create_alias_vars. 	Call promote_call_clobbered_vars 	Do debugging dumps. 	Set 'aliases_computed_p' to true before returning. 	(create_memory_tags): Call may_be_aliased. 	Mark new memory tags for renaming. 	(compute_alias_sets): Don't do debugging dumps. 	(find_variable_in): Move from tree-must-alias.c 	(remove_element_from): Likewise. 	(find_addressable_vars): Likewise 	(promote_call_clobbered_vars): New. 	(get_memory_tag_for): Mark the tag volatile if the pointed-to type 	is volatile. 	* tree-dump.c (dump_files): Remove entry for tree-mustalias. 	Add entries for tree-ssa7, tree-dom3 and tree-dce3. 	* tree-flow-inline.h (may_be_aliased): New. 	* tree-flow.h (may_be_aliased): Declare. 	(aliases_computed_p): Declare. 	(tree_compute_must_alias): Remove. 	* tree-must-alias.c: Remove. 	* tree-optimize.c: Include tree-alias-common.h. 	(optimize_function_tree): Call create_alias_vars before going into 	SSA form. 	Do not compute aliases until after the first DOM and DCE passes. 	Run DOM and DCE once more after computing may-aliases. 	* tree-ssa-dom.c (propagate_copy): Merge the dereferenced bit flags 	when copy propagating pointers. 	* tree-ssa-operands.c (get_stmt_operands): Assume that the 	statement has no volatile operands. 	(get_expr_operands): When processing an INDIRECT_REF expressions, 	mark the statement as having volatile operands if aliases have not 	been computed. 	(add_stmt_operand): If the variable

--- a/tree-ssa-20020619-branch/gcc/doc/invoke.texi
+++ b/tree-ssa-20020619-branch/gcc/doc/invoke.texi
@@ -253,7 +253,7 @@ in the following sections.
 -fdump-tree-ssa@r{[}-@var{n}@r{]} -fdump-tree-pre@r{[}-@var{n}@r{]} @gol
 -fdump-tree-ccp@r{[}-@var{n}@r{]} -fdump-tree-dce@r{[}-@var{n}@r{]} @gol
 -fdump-tree-gimple@r{[}-raw@r{]} -fdump-tree-mudflap@r{[}-@var{n}@r{]} @gol
--fdump-tree-must-alias@r{[}-@var{n}@r{]} -fdump-tree-dom@r{[}-@var{n}@r{]}@gol
+-fdump-tree-dom@r{[}-@var{n}@r{]} @gol
 -fdump-tree-loop@r{[}-@var{n}@r{]} -fdump-tree-sra@r{[}-@var{n}@r{]} @gol
 -feliminate-dwarf2-dups -feliminate-unused-debug-types @gol
 -feliminate-unused-debug-symbols -fmem-report -fprofile-arcs @gol
@@ -304,7 +304,7 @@ in the following sections.
 -funroll-all-loops  -funroll-loops  -fpeel-loops @gol
 -funswitch-loops  -fold-unroll-loops  -fold-unroll-all-loops @gol
 -ftree-pre  -ftree-ccp  -ftree-dce  -ftree-copyprop  @gol
--fdisable-tree-ssa -ftree-dominator-opts -ftree-must-alias @gol
+-fdisable-tree-ssa -ftree-dominator-opts @gol
 -ftree-loop-optimize -ftree-sra @gol
 --param @var{name}=@var{value}
 -O  -O0  -O1  -O2  -O3  -Os}
@@ -3532,12 +3532,6 @@ appending @file{.dce} to the source file name.
 Dump each function after adding mudflap instrumentation.  The file name is
 made by appending @file{.mudflap} to the source file name.
 
-@item must-alias
-@opindex fdump-tree-must-alias
-Dump each function after computing must-alias information and promoting
-virtual operands to real operands.  The file name is made by appending
-@file{.must-alias} to the source file name.
-
 @item sra
 @opindex fdump-tree-sra
 Dump each function after performing scalar replacement of aggregates.  The
@@ -4306,13 +4300,6 @@ default at -O and higher.
 @item -ftree-loop-optimize
 Perform loop optimization on trees.  This flag is enabled by
 default at -O and higher.
-
-@item -ftree-must-alias
-Perform must-alias analysis on trees.  This analysis will attempt to
-convert pointer dereferences into direct variable references when a
-must-alias relation is found between a pointer P and an addressable varible
-VAR whose address has been taken by P.  This flag is enabled by default at
--O and higher.
 
 @item -ftree-sra
 Perform scalar replacement of aggregates.  This pass replaces structure
