* g++.dg/abi/vbase10.C: Use -mstructure-size-boundary=8 on ARM.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75529 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-07  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/abi/vbase10.C: Use -mstructure-size-boundary=8 on ARM.
+
 2004-01-07  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	PR c/6024
