--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-07  Graydon Hoare  <graydon@redhat.com>
+
+	* java/awt/Container.java (LightweightDispatcher): Implement.
+	(visitChild): Reuse graphics object.
+	(dispatchEventImpl): Optionally dispatch to lightweight.
+	(addNotifyContainerChildren): Build LightweightDispatcher.
+
 2004-01-07  David Jee  <djee@redhat.com>
 
 	* java/awt/Container.java
