* scripts/MakeDefaultMimeTypes.java: Use \n, not 	backslash-newline.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75532 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-07  Tom Tromey  <tromey@redhat.com>
+
+	* scripts/MakeDefaultMimeTypes.java: Use \n, not
+	backslash-newline.
+
 2004-01-07  Graydon Hoare  <graydon@redhat.com>
 
 	* java/awt/Container.java (LightweightDispatcher): Implement.
