--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-08  Hartmut Penner  <hpenner@de.ibm.com>
+
+	* gcc/config/rs6000/rs6000.c (easy_vector_constant): Accept 
+	all vector constant loadable by vsplt*.  
+	(output_vec_const_move): Likewise.
+
 2004-01-07  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	PR c/6024
