* dwarf2.h, unwind-dw2-fde.h, unwind-pe.h, unwind.h: 	Add multiple-include guard. cp: 	* parser.c (cp_parser_save_member_function_body): Mark the 	definition static. treelang: 	* parse.y (yyerror): Mark the definition static.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75536 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/treelang/ChangeLog
+++ b/gcc/treelang/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-07  Zack Weinberg  <zack@codesourcery.com>
+
+	* parse.y (yyerror): Mark the definition static.
+
 2003-12-04  James A. Morrison  <ja2morri@uwaterloo.ca>
 
 	* lex.l: Add \t as a whitespace character.
