--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,9 +1,14 @@
+2004-01-07  Zack Weinberg  <zack@codesourcery.com>
+
+	* parser.c (cp_parser_save_member_function_body): Mark the
+	definition static.
+
 2004-01-05  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13057
 	* class.c (build_clone): Copy type attributes from the original
 	function to the clone.
-	
+
 	PR c++/12815
 	* class.c (build_vtbl_ref_1): Do not unconditionally mark vtable
 	references as constant.
