* simplify-rtx.c (simplify_immed_subreg): Fix construction of 	floating-point constants.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75540 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-08  Richard Sandiford  <rsandifo@redhat.com>
+
+	* simplify-rtx.c (simplify_immed_subreg): Fix construction of
+	floating-point constants.
+
 2004-01-08  J. Brobecker  <brobecker@gnat.com>
 
 	* dwarf2out.c (subrange_type_die): Add context_die parameter.
