--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-08  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/JLayeredPane.java: Revert changes to standard
+	boilerplate, reworked imports.
+
 2004-01-07  Tom Tromey  <tromey@redhat.com>
 
 	PR libgcj/13439:
