--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-08  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/12573
+	* g++.dg/template/dependent-expr4.C: New test.
+
 2004-01-08  Hartmut Penner  <hpenner@de.ibm.com>
 
 	* gcc.dg/altivec-11.c: New test.
