--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-08  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* testsuite/libffi.call/ffitest.h (allocate_mmap): Cast MAP_FAILED
+	to void *.
+
 2003-12-10  Richard Henderson  <rth@redhat.com>
 
 	* testsuite/libffi.call/cls_align_pointer.c: Cast pointers to
