* ada/acats/run_acats: Treat 'gnatchop' the same way 	as 'gnatmake'.  Export GCC_DRIVER. 	* ada/acats/run_all.sh: Add target_gnatchop.  Use 	'host_gnatchop' and 'target_gnatchop' instead of 'gnatshop'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75551 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-08  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* ada/acats/run_acats: Treat 'gnatchop' the same way
+	as 'gnatmake'.  Export GCC_DRIVER.
+	* ada/acats/run_all.sh: Add target_gnatchop.  Use
+	'host_gnatchop' and 'target_gnatchop' instead of 'gnatshop'.
+
 2004-01-08  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	PR c++/12573
