--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-08  Jan Hubicka  <jh@suse.cz>
+
+	* cgraphunit.c (cgraph_decide_inlining):  Fix typo.
+
 2004-01-08  Geoffrey Keating  <geoffk@apple.com>
 
 	* config/rs6000/rs6000.md (cmptf_internal1): Correct branch offset.
