* gcc.dg/array-quals-1.c: Accept .data.rel.ro.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75565 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Alan Modra  <amodra@bigpond.net.au>
+
+	* gcc.dg/array-quals-1.c: Accept .data.rel.ro.
+
 2004-01-08  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* ada/acats/run_acats: Treat 'gnatchop' the same way
