2004-01-08  Stuart Hastings  <stuart@apple.com>
	* config/i386/i386.md: Typos in MMX/SSE immediate shifts.
	* testsuite/gcc.dg/20020523-2.c (bail_if_no_sse): Moved cpu-ID code...
	testsuite/gcc.dg/i386-cpuid.h (i386_cpuid): ...to here, to share with...
	* testsuite/gcc.dg/i386-sse-6.c: ...this new testcase.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75566 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-08  Stuart Hastings  <stuart@apple.com>
+
+	* config/i386/i386.md: Typos in MMX/SSE immediate shifts.
+
 2004-01-08  Jan Hubicka  <jh@suse.cz>
 
 	* cgraphunit.c (cgraph_decide_inlining):  Fix typo.
