PR target/13380. 	* gcc.c-torture/compile/20040109-1.c: New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75587 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Kazu Hirata  <kazu@cs.umass.edu>
+
+	PR target/13380.
+	* gcc.c-torture/compile/20040109-1.c: New.
+
 2004-01-08  Stuart Hastings  <stuart@apple.com>
 
 	* testsuite/gcc.dg/20020523-2.c (bail_if_no_sse): Moved cpu-ID code...
