--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
+
+	* config/m32r/m32r.h (TARGET_CPU_CPP_BUILTINS): Add __m32r__.
+
 2004-01-09  Kazu Hirata  <kazu@cs.umass.edu>
 
 	PR target/13380.
