--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Michael Koch  <konqueror@gmx.de>
+
+	* gnu/java/lang/ArrayHelper.java
+	(equalsArray): Removed.
+
 2004-01-09  Andrew Haley  <aph@redhat.com>
 
 	* java/lang/natClassLoader.cc (_Jv_PrepareCompiledClass): Resolve
