--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Andrew Haley  <aph@redhat.com>
+
+	* lib/libjava.exp (bytecompile_file): Log compile command.
+
 2004-01-07  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	PR libgcj/13011:
